# ALSE_2020_i

./: README.md
PROYECTO/: CMakeLists.txt  CMakeLists.txt.user.2bf345e  DB_local.cpp  DB_local.h  DB_remota.cpp  DB_remota.h  Dato.h  Estacion_meteo.cpp  Estacion_meteo.h  Muestreador.cpp  Muestreador.h  estacion_interface.cpp  estacion_interface.h  estacion_interface.ui  main.cpp
clima.app/: CMakeLists.txt  Dato.cpp  Dato.cpp.autosave  Dato.h  Muestreador.cpp  Muestreador.cpp.autosave  Muestreador.h  Muestreador.h.autosave  main.cpp
lectura/: CMakeLists.txt  entrada.txt  lectura.cpp  lectura.h
pr0/: funcion.cpp
pr0/marrices_app/: main.cpp  marrices_app.pro  mw_principal.h
pr0/matrices_app/: m.cpp  m.h  m.ui  main.cpp  matrices_app.pro  mw_principal.cpp  mw_principal.ui
proyecto/: DB_local.cpp  DB_local.h
proyecto/PROYECTO/: CMakeLists.txt  CMakeLists.txt.user.2bf345e  DB_local.cpp  DB_local.h  Dato.cpp  Estacion_meteo.cpp  Estacion_meteo.h  Muestreador.cpp  alarma_class.cpp  alarma_class.h  main.cpp  maina.cpp
proyecto/build-PROYECTO-Desktop-Default/: CMakeCache.txt  DB_local.db  Makefile  clima  clima.cbp  cmake_install.cmake
proyecto/build-PROYECTO-Desktop-Default/clima_autogen/: mocs_compilation.cpp
proyecto/build-PROYECTO-Desktop-Default/clima_autogen/EWIEGA46WW/: moc_Estacion_meteo.cpp  moc_alarma_class.cpp
